# Estudos-de-moto-no-brasil

./: .gitignore  DEPLOYMENT.md  MIGRATION_PLAN.md  README.md  SETUP.md  VERIFICATION.md  append_analysis.py  auth_vip.py  base_motos_VIP_mestre.csv  convert_data.py  create_notebook.py  diagnostico2.txt  diagnostico_output.txt  diagnostico_regressao.py  main.py  package-lock.json  package.json  process_fipe.py  pyproject.toml  regression_model.py  run_analysis.py  test_journeys.py  update_bundle.py  vite.config.ts  wrangler.jsonc  wrangler.toml
app/: auth_vip.py  main.py  utils.py
app/templates/: base.html  index.html
app/templates/partials/: sidebar.html  tab_search.html  tab_vip.html
public/css/: base.css  buttons.css  cards.css  theme-toggle.css
src/: entry.py
src/app/: auth_vip.py  data_bundle.py  main.py  utils.py
src/app/templates/: base.html  index.html
src/app/templates/partials/: sidebar.html  tab_compare.html  tab_pricing.html  tab_search.html  tab_tutorial.html  tab_vip.html
src/routes/: +layout.svelte  +page.svelte
src/routes/(with-sidebar)/: +layout.svelte
src/routes/(with-sidebar)/analise/: +page.svelte
src/routes/(with-sidebar)/comparar/: +page.svelte
src/routes/(with-sidebar)/recomendar/: +page.svelte
src/routes/(with-sidebar)/relatorios/: +page.svelte
src/routes/api/analyze/: +server.ts
src/routes/api/auth/login/: +server.ts
src/routes/api/auth/logout/: +server.ts
src/routes/api/compare/: +server.ts
src/routes/api/marcas/[tipo]/: +server.ts
src/routes/api/modelos/[tipo]/[marca]/: +server.ts
src/routes/api/recomendar/: +server.ts
src/routes/api/vip/activate/: +server.ts
src/routes/api/vip/reports/: +server.ts
src/routes/api/webhooks/mercado-pago/: +server.ts
static/css/: alerts.css  badges.css  forms.css  tables.css  tabs.css
templates/: base.html
templates/partials/: sidebar.html  tab_compare.html  tab_search.html  tab_vip.html
