[project]
name = "estudos-de-moto-no-brasil"
version = "0.1.0"
description = "MotoExpert AI - Motorcycle price analysis and depreciation tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = []
