[project]
name = "estudos-de-moto-no-brasil"
version = "0.1.0"
description = "MotoExpert AI - Motorcycle price analysis and depreciation tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
local = [
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]
